feat:spring core翻译至4.1

--- a/docs/01.文档翻译/01.Spring Framework/01.core.md
+++ b/docs/01.文档翻译/01.Spring Framework/01.core.md
@@ -6538,6 +6538,489 @@ cs.convert(input,
 
 ### 3.5.1. `Formatter`  SPI
 
+Formatter SPI实现字段格式化逻辑简单且强类型。以下列表显示了Formatter接口的定义：
+
+```java
+package org.springframework.format;
+
+public interface Formatter<T> extends Printer<T>, Parser<T> {
+}
+```
+
+Formatter继承了Printer和Parser接口。以下显示了这两个接口的定义：
+
+```java
+public interface Printer<T> {
+
+    String print(T fieldValue, Locale locale);
+}
+```
+
+```java
+import java.text.ParseException;
+
+public interface Parser<T> {
+
+    T parse(String clientValue, Locale locale) throws ParseException;
+}
+```
+
+实现Formatter接口以创建你自己的Formatter。参数T是您要格式化的对象的类型，例如java.util.Date。实现print()操作打印T的实例，以在客户端语言环境中显示。实现parse()操作以从客户端语言环境返回的格式化表示解析T实例。如果解析尝试失败，则您的Formatter应抛出ParseException或IllegalArgumentException。注意确保您的Formatter实现是线程安全的。
+
+format子包为方便起见提供了多个Formatter的实现。number包提供了NumberStyleFormatter，CurrencyStyleFormatter和PercentStyleFormatter，它们使用java.text.NumberFormat格式化Number对象。datetime包提供了DateFormatter使用java.text.DateFormat格式化java.util.Date对象。
+
+下列DateFormatter是Formatter的实现：
+
+```java
+package org.springframework.format.datetime;
+
+public final class DateFormatter implements Formatter<Date> {
+
+    private String pattern;
+
+    public DateFormatter(String pattern) {
+        this.pattern = pattern;
+    }
+
+    public String print(Date date, Locale locale) {
+        if (date == null) {
+            return "";
+        }
+        return getDateFormat(locale).format(date);
+    }
+
+    public Date parse(String formatted, Locale locale) throws ParseException {
+        if (formatted.length() == 0) {
+            return null;
+        }
+        return getDateFormat(locale).parse(formatted);
+    }
+
+    protected DateFormat getDateFormat(Locale locale) {
+        DateFormat dateFormat = new SimpleDateFormat(this.pattern, locale);
+        dateFormat.setLenient(false);
+        return dateFormat;
+    }
+}
+```
+
+srping团队欢迎社区驱动的Formatter贡献。请参阅[GitHub Issues](https://github.com/spring-projects/spring-framework/issues) 以做出贡献。
+
+### 3.5.2. 注解驱动Formatting
+
+字段格式化可以通过字段类型或注解配置。要将注解绑定到Formatter器，请实现AnnotationFormatterFactory。以下列表显示了AnnotationFormatterFactory接口的定义：
+
+```java
+package org.springframework.format;
+
+public interface AnnotationFormatterFactory<A extends Annotation> {
+
+    Set<Class<?>> getFieldTypes();
+
+    Printer<?> getPrinter(A annotation, Class<?> fieldType);
+
+    Parser<?> getParser(A annotation, Class<?> fieldType);
+}
+```
+
+创建实现：参数A是您希望与格式化逻辑相关联的字段annotationType--例如org.springframework.format.annotation.DateTimeFormat。
+
+让getFieldTypes()返回可以使用注解的字段类型。让getPrinter()返回Printer以打印注解字段的值。让getParser()返回Parser以解析带注解的字段的clientValue。
+
+以下AnnotationFormatterFactory实现将@NumberFormat绑定到格式化器，以指定一个数字样式或模式：
+
+```java
+public final class NumberFormatAnnotationFormatterFactory
+        implements AnnotationFormatterFactory<NumberFormat> {
+
+    public Set<Class<?>> getFieldTypes() {
+        return new HashSet<Class<?>>(asList(new Class<?>[] {
+            Short.class, Integer.class, Long.class, Float.class,
+            Double.class, BigDecimal.class, BigInteger.class }));
+    }
+
+    public Printer<Number> getPrinter(NumberFormat annotation, Class<?> fieldType) {
+        return configureFormatterFrom(annotation, fieldType);
+    }
+
+    public Parser<Number> getParser(NumberFormat annotation, Class<?> fieldType) {
+        return configureFormatterFrom(annotation, fieldType);
+    }
+
+    private Formatter<Number> configureFormatterFrom(NumberFormat annotation, Class<?> fieldType) {
+        if (!annotation.pattern().isEmpty()) {
+            return new NumberStyleFormatter(annotation.pattern());
+        } else {
+            Style style = annotation.style();
+            if (style == Style.PERCENT) {
+                return new PercentStyleFormatter();
+            } else if (style == Style.CURRENCY) {
+                return new CurrencyStyleFormatter();
+            } else {
+                return new NumberStyleFormatter();
+            }
+        }
+    }
+}
+```
+
+要触发格式化，您可以用@NumberFormat注解字段，如以下示例所示：
+
+```java
+public class MyModel {
+
+    @NumberFormat(style=Style.CURRENCY)
+    private BigDecimal decimal;
+}
+```
+
+**格式化注解API**
+
+org.springframework.format.annotation软件包中存在用于格式化的注解API。您可以使用@NumberFormat格式化Number字段，例如Double和Long；@DateTimeFormat格式化java.util.Date，java.util.Calendar，Long（用于毫秒的时间戳）以及JSR-310 java.time。
+
+以下示例使用@DateTimeFormat将java.util.date格式化为ISO日期（yyyy-mm-dd）：
+
+```java
+public class MyModel {
+
+    @DateTimeFormat(iso=ISO.DATE)
+    private Date date;
+}
+```
+
+### 3.5.3. `FormatterRegistry` SPI
+
+FormatterRegistry是用于注册格式和转换器的SPI。FormattingConversionService是适用于大多数环境的FormatterRegistry的实现。您可以通过编程或声明地将此变体配置为spring bean，例如通过使用FormattingConversionServiceFactoryBean。因为此实现也实现了ConversionService，因此您可以将其直接配置为与Spring的DataBinder和Spring表达式语言（SpEL）一起使用。
+
+以下列表显示了FormatterRegistry SPI：
+
+```java
+package org.springframework.format;
+
+public interface FormatterRegistry extends ConverterRegistry {
+
+    void addFormatterForFieldType(Class<?> fieldType, Printer<?> printer, Parser<?> parser);
+
+    void addFormatterForFieldType(Class<?> fieldType, Formatter<?> formatter);
+
+    void addFormatterForFieldType(Formatter<?> formatter);
+
+    void addFormatterForAnnotation(AnnotationFormatterFactory<?> factory);
+}
+```
+
+如前所述，您可以按字段类型或注解注册格式化器。
+
+FormatterRegistry SPI使您可以集中配置格式化规则，而不是在控制器上重复此类配置。例如，您可能需要强制所有日期字段以某种方式格式化，或者具有特定注解的字段以某种方式格式化。有了共享的FormatterRegistry，您只需定义这些规则一次，并且在需要格式化时将其应用。
+
+### 3.5.4. `FormatterRegistrar` SPI
+
+FormatterRegistrar是通过FormatterRegistry进行注册格式化器和转换器的SPI。以下列表显示其接口定义：
+
+```java
+package org.springframework.format;
+
+public interface FormatterRegistrar {
+
+    void registerFormatters(FormatterRegistry registry);
+}
+```
+
+在为给定格式类别（例如日期格式化）注册多个相关的转换器和格式化器时，FormatterRegistrar很有用。在声明性注册不适用的情况下，这也可能很有用 - 例如，当需要在不同于它自身<T\>的特定字段类型下或在注册Printer/Parser对时，需要格式化器可索引。下一节将提供有关转换器和格式注册的更多信息。
+
+### 3.5.5. 在Spring MVC中配置格式化
+
+请参阅Spring MVC中的 [Conversion and Formatting](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/web.html#mvc-config-conversion)。
+
+
+
+## 3.6. 配置全局Date和Time格式化
+
+默认情况下，未用@DateTimeFormat注解的日期和时间字段通过使用DateFormat.SHORT样式从字符串转换。你可以通过定义自己的全局格式来更改此行为。
+
+为此，请确保Spring没有注册默认格式化器。相反，请在以下类帮助下手动注册格式器。
+
+- `org.springframework.format.datetime.standard.DateTimeFormatterRegistrar`
+
+- `org.springframework.format.datetime.DateFormatterRegistrar`
+
+例如，以下Java配置注册了全局yyyyMMdd格式：
+
+```java
+@Configuration
+public class AppConfig {
+
+    @Bean
+    public FormattingConversionService conversionService() {
+
+        // Use the DefaultFormattingConversionService but do not register defaults
+        DefaultFormattingConversionService conversionService = new DefaultFormattingConversionService(false);
+
+        // Ensure @NumberFormat is still supported
+        conversionService.addFormatterForFieldAnnotation(new NumberFormatAnnotationFormatterFactory());
+
+        // Register JSR-310 date conversion with a specific global format
+        DateTimeFormatterRegistrar registrar = new DateTimeFormatterRegistrar();
+        registrar.setDateFormatter(DateTimeFormatter.ofPattern("yyyyMMdd"));
+        registrar.registerFormatters(conversionService);
+
+        // Register date conversion with a specific global format
+        DateFormatterRegistrar registrar = new DateFormatterRegistrar();
+        registrar.setFormatter(new DateFormatter("yyyyMMdd"));
+        registrar.registerFormatters(conversionService);
+
+        return conversionService;
+    }
+}
+```
+
+如果您喜欢基于XML的配置，则可以使用FormattingConversionServiceFactoryBean。以下示例显示了如何做：
+
+```xml
+<?xml version="1.0" encoding="UTF-8"?>
+<beans xmlns="http://www.springframework.org/schema/beans"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+    xsi:schemaLocation="
+        http://www.springframework.org/schema/beans
+        https://www.springframework.org/schema/beans/spring-beans.xsd>
+
+    <bean id="conversionService" class="org.springframework.format.support.FormattingConversionServiceFactoryBean">
+        <property name="registerDefaultFormatters" value="false" />
+        <property name="formatters">
+            <set>
+                <bean class="org.springframework.format.number.NumberFormatAnnotationFormatterFactory" />
+            </set>
+        </property>
+        <property name="formatterRegistrars">
+            <set>
+                <bean class="org.springframework.format.datetime.standard.DateTimeFormatterRegistrar">
+                    <property name="dateFormatter">
+                        <bean class="org.springframework.format.datetime.standard.DateTimeFormatterFactoryBean">
+                            <property name="pattern" value="yyyyMMdd"/>
+                        </bean>
+                    </property>
+                </bean>
+            </set>
+        </property>
+    </bean>
+</beans>
+```
+
+请注意，在Web应用程序中配置日期和时间格式化时，会有额外的注意事项。请参阅[WebMVC Conversion and Formatting](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/web.html#mvc-config-conversion) 或 [WebFlux Conversion and Formatting](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/web-reactive.html#webflux-config-conversion)。
+
+## 3.7. Java Bean校验
+
+Spring框架为[Java Bean Validation](https://beanvalidation.org/) API提供了支持。
+
+### 3.7.1. Bean校验概览
+
+Bean验证通过约束声明和元数据为Java应用程序的提供了一种常见的验证方式。要使用它，您可以使用声明性的校验约束注解域模型属性，在运行时它们会被强制执行。有内置的约束，您还可以定义自己的约束。
+
+考虑以下示例，该示例显示一个具有两个属性的简单PersonForm模型：
+
+```java
+public class PersonForm {
+    private String name;
+    private int age;
+}
+```
+
+Bean 验证使您可以声明约束，如以下示例所示：
+
+```java
+public class PersonForm {
+
+    @NotNull
+    @Size(max=64)
+    private String name;
+
+    @Min(0)
+    private int age;
+}
+```
+
+Bean验证验证器基于声明的约束来验证该类的实例。有关API的一般信息，请参见[Bean Validation](https://beanvalidation.org/)。有关特定约束，请参见[Hibernate Validator](https://hibernate.org/validator/) 文档。要了解如何将bean验证器设置为spring bean，请继续阅读。
+
+### 3.7.2. 配置Bean验证提供器
+
+Spring为Bean验证API提供了全面的支持，包括将Bean验证提供者作为Spring bean引导。这使您可以在应用程序中需要验证的地方注入javax.validation.ValidatorFactor或javax.validation.Validator。
+
+您可以使用LocalValidatorFactoryBean配置默认的验证器bean，如以下示例所示：
+
+```java
+import org.springframework.validation.beanvalidation.LocalValidatorFactoryBean;
+
+@Configuration
+public class AppConfig {
+
+    @Bean
+    public LocalValidatorFactoryBean validator() {
+        return new LocalValidatorFactoryBean();
+    }
+}
+```
+
+前面示例中的基本配置触发了bean验证以使用其默认的引导机制来初始化。Bean验证提供者（例如Hibernate验证器）期望在类路径中存在并自动检测到。
+
+**注入验证器**
+
+LocalValidatorFactoryBean和Spring的org.springframework.validation.Validator一样同时实现javax.validation.ValidatorFactory和javax.validation.Validator。您可以将这些接口中的任何一个注入需要调用验证逻辑的bean中。
+
+如果您喜欢直接使用bean验证API，您可以注入javax.validation.Validator的引用，如以下示例所示：
+
+```java
+import javax.validation.Validator;
+
+@Service
+public class MyService {
+
+    @Autowired
+    private Validator validator;
+}
+```
+
+如果您的bean需要弹spring验证API,您可以注入org.springframework.validation.Validator的引用，如以下示例所示：
+
+```java
+import org.springframework.validation.Validator;
+
+@Service
+public class MyService {
+
+    @Autowired
+    private Validator validator;
+}
+```
+
+**配置自定义约束**
+
+每个bean验证约束都由两个部分组成：
+
+- @Constraint注解，声明约束及其可配置的属性。
+- 实现了约束行为的javax.validation.ConstraintValidator接口的实现。
+
+为了将声明与实现相关联，每个@Constraint引用了相应的ConstraintValidator实现类。在运行时，当您的域模型中遇到约束注解时，ConstraintValidatorFactory会实例化该引用的实现。
+
+默认情况下，LocalValidatorFactoryBean配置了SpringConstraintValidatorFactory，其使用Spring创建ConstraintValidator实例。这使您的自定义约束像其他任何Spring bean一样受益于依赖注入。
+
+下面的示例显示了一个自定义@Constraint声明，其关联了一个使用Spring进行依赖注入的ConstraintValidator实现：
+
+```java
+@Target({ElementType.METHOD, ElementType.FIELD})
+@Retention(RetentionPolicy.RUNTIME)
+@Constraint(validatedBy=MyConstraintValidator.class)
+public @interface MyConstraint {
+}
+```
+
+```java
+import javax.validation.ConstraintValidator;
+
+public class MyConstraintValidator implements ConstraintValidator {
+
+    @Autowired;
+    private Foo aDependency;
+
+    // ...
+}
+```
+
+如前一个示例所示，ConstraintValidator实现可以像其他任何Spring bean一样使用 `@Autowired`。
+
+**Spring驱动的方法验证**
+
+您可以通过MethodValidationPostProcessor bean定义将Bean Validation 1.1支持（Hibernate Validator 4.3也作为自定义扩展）的方法验证功能集成到Spring上下文中：
+
+```java
+import org.springframework.validation.beanvalidation.MethodValidationPostProcessor;
+
+@Configuration
+public class AppConfig {
+
+    @Bean
+    public MethodValidationPostProcessor validationPostProcessor() {
+        return new MethodValidationPostProcessor();
+    }
+}
+```
+
+要使用Spring方法验证，需要用Spring的@Validated来标注所有目标类，同时可以选择地声明要使用的验证组。有关设置Hibernate验证器和Bean Validation 1.1提供者详细信息，请参见[`MethodValidationPostProcessor`](https://docs.spring.io/spring-framework/docs/5.3.2/javadoc-api/org/springframework/validation/beanvalidation/MethodValidationPostProcessor.html)。
+
+> :bulb:方法验证依赖于目标类使用了[AOP Proxies](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-introduction-proxies)，或者接口方法的 JDK动态代理或CGLIB代理。使用代理有一定的局限性，其中一些在[Understanding AOP Proxies](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-understanding-aop-proxies)中进行了描述。此外，请记住始终在代理类上使用方法和访问函数；直接访问字段将不起作用。
+
+**额外的配置选项**
+
+在大多数情况下，默认的LocalValidatorFactoryBean配置就足够了。从message interpolation到traversal resolution，有许多用于各种Bean验证构造的配置选项。参考[`LocalValidatorFactoryBean`](https://docs.spring.io/spring-framework/docs/5.3.2/javadoc-api/org/springframework/validation/beanvalidation/LocalValidatorFactoryBean.html)获取更多信息。
+
+### 3.7.3. 配置`DataBinder`
+
+从Spring 3开始，您可以使用Validator配置DataBinder实例。配置后，您可以通过binder.validate()来调用Validator。任何验证错误都会自动添加到绑定器的BindingResult中。
+
+下面的示例显示了如何在绑定到目标对象之后编程式使用DataBinder以调用验证逻辑：
+
+```java
+Foo target = new Foo();
+DataBinder binder = new DataBinder(target);
+binder.setValidator(new FooValidator());
+
+// bind to the target object
+binder.bind(propertyValues);
+
+// validate the target object
+binder.validate();
+
+// get BindingResult that includes any validation errors
+BindingResult results = binder.getBindingResult();
+```
+
+您还可以通过dataBinder.addValidators和dataBinder.replaceValidators配置有多个Validator的DataBinder。当将全局配置的bean验证与在DataBinder实例上本地配置的Spring Validator结合时，这很有用。参考 [Spring MVC Validation Configuration](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/web.html#mvc-config-validation)。
+
+### 3.7.4. Spring MVC 3验证
+
+参考Spring MVC章节的[Validation](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/web.html#mvc-config-validation) 。
+
+# 4. Spring表达式语言（SpEL）
+
+Spring表达语言（简称“ SpEL”）是一种强大的表达语言，它支持在运行时进行查询和操纵对象图。语言语法类似于统一的EL，但提供了其他功能，最著名的是方法调用和基本字符串模板功能。
+
+虽然还有其他几种Java表达式语言（OGNL，MVEL和JBOSS EL，仅举几例。Spring表达式语言被创建以向Spring社区提供良好支持的表达语言，可以在所有Spring产品中使用。它的语言功能由Spring集成项目的要求驱动，包括在 [Spring Tools for Eclipse](https://spring.io/tools)中对代码完成支持的工具要求。也就是说，SpEL 基于技术敏捷的API，该API使其他表达语言实现在需要时可以集成。
+
+尽管SpEL是Spring项目组中表达计算的基础，但它与Spring没有直接绑定，可以独立使用。要自我包含，本章中的许多示例都使用SpEL，就好像它是一种独立的表达语言一样。这需要创建一些引导基础架构类，例如解析器。大多数Spring用户不需要处理此基础架构，而是仅对表达式字符串进行计算。这种典型用途的一个示例是将SpEL集成到创建XML或基于注解的bean定义中，如 [Expression support for defining bean definitions](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#expressions-beandef)所示。
+
+本章涵盖了表达语言，其API和其语言语法的特征。在好几个地方，Inventor和Society被用作表达式计算的目标对象。这些类声明和用于填充它们的数据在本章末尾列出。
+
+表达语言支持以下功能：
+
+- Literal expressions（字面意义表达）
+- Boolean and relational operators（Boolean和相关操作）
+- Regular expressions（正则表达）
+- Class expressions（类表达）
+- Accessing properties, arrays, lists, and maps（访问属性，数组，列表和maps）
+- Method invocation（方法调用）
+- Relational operators（关系运算）
+- Assignment（赋值）
+- Calling constructors（调用构造器）
+- Bean references（bean引用）
+- Array construction（数组构造）
+- Inline lists（内联列表）
+- Inline maps（内联maps）
+- Ternary operator（三元运算）
+- Variables（变量声明）
+- User-defined functions（用户定义函数）
+- Collection projection（集合映射）
+- Collection selection（集合挑选）
+- Templated expressions（模板表达式）
+
+
+
+## 4.1. 计算
+
+
+
+
+
+
+
 
 
 
