feat: spring core翻译至5.2

--- a/docs/01.文档翻译/01.Spring Framework/01.core.md
+++ b/docs/01.文档翻译/01.Spring Framework/01.core.md
@@ -7332,9 +7332,7 @@ public class MovieRecommender {
 
 ## 4.3. 语言参考
 
-本节描述了Spring表达语言的工作原理。它涵盖以下主题：
-
-
+本节描述了Spring表达语言的工作原理。
 
 ### 4.3.1. 文本表达式
 
@@ -7361,6 +7359,750 @@ Object nullValue = parser.parseExpression("null").getValue();
 数字支持使用负符号，指数符号和小数点的使用。默认情况下，使用Double.parseDouble()来解析实数。
 
 ### 4.3.2. 属性，数组，列表，Maps和索引
+
+用属性引用导航很容易。为此，请使用一个句点引用嵌套属性值。Inventor类的实例，pupin和tesla，填充了示例中需要的数据。为了向下导航并获得Tesla的出生年份和Pupin的出生城市，我们使用以下表达：
+
+```java
+// evals to 1856
+int year = (Integer) parser.parseExpression("birthdate.year + 1900").getValue(context);
+
+String city = (String) parser.parseExpression("placeOfBirth.city").getValue(context);
+```
+
+> :information_source:属性名的首字母大小写不敏感。因此，上述示例中的表达方式可以写为Birthdate.Year + 1900和PlaceOfBirth.City。此外，可以选择通过方法调用来访问属性，例如getPlaceOfBirth().getCity()。
+
+数组和列表的内容是通过使用方括号符号获得的，如以下示例：
+
+```java
+ExpressionParser parser = new SpelExpressionParser();
+EvaluationContext context = SimpleEvaluationContext.forReadOnlyDataBinding().build();
+
+// Inventions Array
+
+// evaluates to "Induction motor"
+String invention = parser.parseExpression("inventions[3]").getValue(
+        context, tesla, String.class);
+
+// Members List
+
+// evaluates to "Nikola Tesla"
+String name = parser.parseExpression("members[0].name").getValue(
+        context, ieee, String.class);
+
+// List and Array navigation
+// evaluates to "Wireless communication"
+String invention = parser.parseExpression("members[0].inventions[6]").getValue(
+        context, ieee, String.class);
+```
+
+通过指定括号内的文本键值获得map的内容。在下面的示例中，由于officers的key是字符串，我们可以指定字符串文字：
+
+```java
+// Officer's Dictionary
+
+Inventor pupin = parser.parseExpression("officers['president']").getValue(
+        societyContext, Inventor.class);
+
+// evaluates to "Idvor"
+String city = parser.parseExpression("officers['president'].placeOfBirth.city").getValue(
+        societyContext, String.class);
+
+// setting values
+parser.parseExpression("officers['advisors'][0].placeOfBirth.country").setValue(
+        societyContext, "Croatia");
+```
+
+### 4.3.3. 内联列表
+
+您可以使用`{}`直接在表达式中表式列表。
+
+```java
+// evaluates to a Java list containing the four numbers
+List numbers = (List) parser.parseExpression("{1,2,3,4}").getValue(context);
+
+List listOfLists = (List) parser.parseExpression("{{'a','b'},{'x','y'}}").getValue(context);
+```
+
+`{}`本身意味着一个空列表。出于性能原因，如果列表本身完全由固定文字组成，则创建一个常数列表来表示表达式（而不是在每次计算时构建新列表）。
+
+### 4.3.4. 内联Maps
+
+您还可以使用`{key：value}`直接表式表达式中的map。以下示例显示了如何做到的：
+
+```java
+// evaluates to a Java map containing the two entries
+Map inventorInfo = (Map) parser.parseExpression("{name:'Nikola',dob:'10-July-1856'}").getValue(context);
+
+Map mapOfMaps = (Map) parser.parseExpression("{name:{first:'Nikola',last:'Tesla'},dob:{day:10,month:'July',year:1856}}").getValue(context);
+```
+
+`{:}`本身意味着一个空的map。出于性能原因，如果map本身由固定的文字或其他嵌套常数结构（列表或地图）组成，则创建一个常数映射以表示表达式（而不是在每次计算时构建新的map）。map的key可以用引号包裹。上面的示例没有使用引用键。
+
+### 4.3.5. 数组构造
+
+您可以使用熟悉的Java语法来构建数组，可以提供初始化器以便在构造时填充数组。以下示例显示了如何做到的：
+
+```java
+int[] numbers1 = (int[]) parser.parseExpression("new int[4]").getValue(context);
+
+// Array with initializer
+int[] numbers2 = (int[]) parser.parseExpression("new int[]{1,2,3}").getValue(context);
+
+// Multi dimensional array
+int[][] numbers3 = (int[][]) parser.parseExpression("new int[4][5]").getValue(context);
+```
+
+当您构建多维数组时，当前无法提供初始化器。
+
+### 4.3.6. 方法
+
+您可以使用典型的Java编程语法调用方法。您还可以以文本字面量调用方法。也支持可变参数。以下示例显示了如何调用方法：
+
+```java
+// string literal, evaluates to "bc"
+String bc = parser.parseExpression("'abc'.substring(1, 3)").getValue(String.class);
+
+// evaluates to true
+boolean isMember = parser.parseExpression("isMember('Mihajlo Pupin')").getValue(
+        societyContext, Boolean.class);
+```
+
+### 4.3.7. 操作符
+
+Spring表达式语言支持以下类型的操作符：
+
+- 关系运算符
+- 逻辑运算符
+- 数学运算符
+- 赋值运算符
+
+**关系运算符**
+
+使用标准操作符以支持关系运算（==，!=，<，<=，>，>=）。以下清单显示了运营商的一些示例：
+
+```java
+// evaluates to true
+boolean trueValue = parser.parseExpression("2 == 2").getValue(Boolean.class);
+
+// evaluates to false
+boolean falseValue = parser.parseExpression("2 < -5.0").getValue(Boolean.class);
+
+// evaluates to true
+boolean trueValue = parser.parseExpression("'black' < 'block'").getValue(Boolean.class);
+```
+
+> :information_source:与null的大于或小于比较，遵循一个简单的规则：null被认为什么也不是（不是视为0）。因此，任何其他值始终都大于null（x> null始终是正确的），并且其他任何非null值都不会小于null（x <null始终是false）。
+>
+> 如果您更喜欢数字比较，请避免基于数字的null比较，而是与0的比较（例如，x> 0或x <0）。
+
+除标准关系运算符外，SpEL还支持基于正则表达式和instanceof操作符。以下清单显示了两者的示例：
+
+```java
+// evaluates to false
+boolean falseValue = parser.parseExpression(
+        "'xyz' instanceof T(Integer)").getValue(Boolean.class);
+
+// evaluates to true
+boolean trueValue = parser.parseExpression(
+        "'5.00' matches '^-?\\d+(\\.\\d{2})?$'").getValue(Boolean.class);
+
+//evaluates to false
+boolean falseValue = parser.parseExpression(
+        "'5.0067' matches '^-?\\d+(\\.\\d{2})?$'").getValue(Boolean.class);
+```
+
+> :bell:要小心处理原始类型，因为它们会隐式地装箱为包装类型，因此`1 instanceof T(int)`结果为false，而`1 instanceof T(Integer)`结果为true。
+
+每个操作符也可以指定为纯粹的字母。这避免了所使用的符号对表达式在嵌入的文档类型中具有特殊含义的问题（例如XML文档中）。文本等效物是：
+
+- `lt` (`<`)
+- `gt` (`>`)
+- `le` (`<=`)
+- `ge` (`>=`)
+- `eq` (`==`)
+- `ne` (`!=`)
+- `div` (`/`)
+- `mod` (`%`)
+- `not` (`!`)
+
+所有的文本操作符都是大小写不敏感的。
+
+**逻辑运算符**
+
+SpEL支持以下逻辑运算符
+
+- `and` (`&&`)
+- `or` (`||`)
+- `not` (`!`)
+
+以下示例显示了如何使用逻辑运算符：
+
+```java
+// -- AND --
+
+// evaluates to false
+boolean falseValue = parser.parseExpression("true and false").getValue(Boolean.class);
+
+// evaluates to true
+String expression = "isMember('Nikola Tesla') and isMember('Mihajlo Pupin')";
+boolean trueValue = parser.parseExpression(expression).getValue(societyContext, Boolean.class);
+
+// -- OR --
+
+// evaluates to true
+boolean trueValue = parser.parseExpression("true or false").getValue(Boolean.class);
+
+// evaluates to true
+String expression = "isMember('Nikola Tesla') or isMember('Albert Einstein')";
+boolean trueValue = parser.parseExpression(expression).getValue(societyContext, Boolean.class);
+
+// -- NOT --
+
+// evaluates to false
+boolean falseValue = parser.parseExpression("!true").getValue(Boolean.class);
+
+// -- AND and NOT --
+String expression = "isMember('Nikola Tesla') and !isMember('Mihajlo Pupin')";
+boolean falseValue = parser.parseExpression(expression).getValue(societyContext, Boolean.class);
+```
+
+**数学运算符**
+
+您可以在数字和字符串上使用加法运算符。您只能在数字上使用减法，乘法和除法运算符。您也可以使用模运算符（％）和指数运算符（^）。标准操作符的优先级是强制执行的。以下示例显示了使用的数学运算符：
+
+```java
+// Addition
+int two = parser.parseExpression("1 + 1").getValue(Integer.class);  // 2
+
+String testString = parser.parseExpression(
+        "'test' + ' ' + 'string'").getValue(String.class);  // 'test string'
+
+// Subtraction
+int four = parser.parseExpression("1 - -3").getValue(Integer.class);  // 4
+
+double d = parser.parseExpression("1000.00 - 1e4").getValue(Double.class);  // -9000
+
+// Multiplication
+int six = parser.parseExpression("-2 * -3").getValue(Integer.class);  // 6
+
+double twentyFour = parser.parseExpression("2.0 * 3e0 * 4").getValue(Double.class);  // 24.0
+
+// Division
+int minusTwo = parser.parseExpression("6 / -3").getValue(Integer.class);  // -2
+
+double one = parser.parseExpression("8.0 / 4e0 / 2").getValue(Double.class);  // 1.0
+
+// Modulus
+int three = parser.parseExpression("7 % 4").getValue(Integer.class);  // 3
+
+int one = parser.parseExpression("8 / 5 % 2").getValue(Integer.class);  // 1
+
+// Operator precedence
+int minusTwentyOne = parser.parseExpression("1+2-3*8").getValue(Integer.class);  // -21
+```
+
+**赋值运算符**
+
+要设置属性，请使用赋值操作员（=）。这通常是调用setValue完成的，但也可以调用getValue完成。以下清单显示了使用赋值运算的两种方法：
+
+```java
+Inventor inventor = new Inventor();
+EvaluationContext context = SimpleEvaluationContext.forReadWriteDataBinding().build();
+
+parser.parseExpression("name").setValue(context, inventor, "Aleksandar Seovic");
+
+// alternatively
+String aleks = parser.parseExpression(
+        "name = 'Aleksandar Seovic'").getValue(context, inventor, String.class);
+```
+
+### 4.3.8. 类型
+
+您可以使用特殊T运算符来指定java.lang.Class（类型）的实例。也使用此操作符调用静态方法。StandardEvaluationContext使用TypeLocator来查找类型，StandardTypeLocator（可以被替换）在java.lang包中。这意味着T()对java.lang中类型的引用不需要完全限定，但是所有其他类型的引用都必须完全限定。下面的示例显示了如何使用T运算符：
+
+```java
+Class dateClass = parser.parseExpression("T(java.util.Date)").getValue(Class.class);
+
+Class stringClass = parser.parseExpression("T(String)").getValue(Class.class);
+
+boolean trueValue = parser.parseExpression(
+        "T(java.math.RoundingMode).CEILING < T(java.math.RoundingMode).FLOOR")
+        .getValue(Boolean.class);
+```
+
+### 4.3.9. 构造器
+
+您可以使用`new`操作符调用构造函数。您应该为除原始类型（int，float等）和String使用完全限定的类名称。以下示例显示了如何使用new操作符调用构造函数：
+
+```java
+Inventor einstein = p.parseExpression(
+        "new org.spring.samples.spel.inventor.Inventor('Albert Einstein', 'German')")
+        .getValue(Inventor.class);
+
+//create new inventor instance within add method of List
+p.parseExpression(
+        "Members.add(new org.spring.samples.spel.inventor.Inventor(
+            'Albert Einstein', 'German'))").getValue(societyContext);
+```
+
+### 4.3.10. 变量
+
+您可以使用`#variablename`语法在表达式中引用变量。通过使用EvaluationContext实现的setVariable方法来设置变量。
+
+> :information_source:有效的变量名称必须由一个或多个支持字符组成。
+>
+> - 字母: `A` to `Z` and `a` to `z`
+> - 数字: `0` to `9`
+> - 下划线: `_`
+> - 美元符号: `$`
+
+以下示例显示了如何使用变量。
+
+```java
+Inventor tesla = new Inventor("Nikola Tesla", "Serbian");
+
+EvaluationContext context = SimpleEvaluationContext.forReadWriteDataBinding().build();
+context.setVariable("newName", "Mike Tesla");
+
+parser.parseExpression("name = #newName").getValue(context, tesla);
+System.out.println(tesla.getName())  // "Mike Tesla"
+```
+
+**`#this`和`#root`**变量
+
+ `#this`变量始终定义，并指当前计算对象。`#root`变量始终定义，并指向根上下文对象。尽管`#this`可能会随着表达式的组成部分的计算而有所不同，但`#root`总是指向根。以下示例显示了如何使用它们：
+
+```java
+// create an array of integers
+List<Integer> primes = new ArrayList<Integer>();
+primes.addAll(Arrays.asList(2,3,5,7,11,13,17));
+
+// create parser and set variable 'primes' as the array of integers
+ExpressionParser parser = new SpelExpressionParser();
+EvaluationContext context = SimpleEvaluationContext.forReadOnlyDataAccess();
+context.setVariable("primes", primes);
+
+// all prime numbers > 10 from the list (using selection ?{...})
+// evaluates to [11, 13, 17]
+List<Integer> primesGreaterThanTen = (List<Integer>) parser.parseExpression(
+        "#primes.?[#this>10]").getValue(context);
+```
+
+### 4.3.11. 函数
+
+您可以通过注册可以在表达式字符串中调用的用户定义功能来扩展SpEL。该函数通过EvaluationContext注册。以下示例显示了如何注册用户定义的函数：
+
+```java
+Method method = ...;
+
+EvaluationContext context = SimpleEvaluationContext.forReadOnlyDataBinding().build();
+context.setVariable("myFunction", method);
+```
+
+例如，考虑以下翻转字符串的实用程序方法：
+
+```java
+public abstract class StringUtils {
+
+    public static String reverseString(String input) {
+        StringBuilder backwards = new StringBuilder(input.length());
+        for (int i = 0; i < input.length(); i++) {
+            backwards.append(input.charAt(input.length() - 1 - i));
+        }
+        return backwards.toString();
+    }
+}
+```
+
+然后，您可以注册并使用上述方法，如以下示例所示：
+
+```java
+ExpressionParser parser = new SpelExpressionParser();
+
+EvaluationContext context = SimpleEvaluationContext.forReadOnlyDataBinding().build();
+context.setVariable("reverseString",
+        StringUtils.class.getDeclaredMethod("reverseString", String.class));
+
+String helloWorldReversed = parser.parseExpression(
+        "#reverseString('hello')").getValue(context, String.class);
+```
+
+### 4.3.12. Bean引用
+
+如果计算上下文已配置了bean解析器，则可以使用 @符号从表达式查找bean。以下示例显示了如何做到的：
+
+```java
+ExpressionParser parser = new SpelExpressionParser();
+StandardEvaluationContext context = new StandardEvaluationContext();
+context.setBeanResolver(new MyBeanResolver());
+
+// This will end up calling resolve(context,"something") on MyBeanResolver during evaluation
+Object bean = parser.parseExpression("@something").getValue(context);
+```
+
+要访问工厂bean本身，您应该将bean名称前加上`&`前缀。以下示例显示了如何做到的：
+
+```java
+ExpressionParser parser = new SpelExpressionParser();
+StandardEvaluationContext context = new StandardEvaluationContext();
+context.setBeanResolver(new MyBeanResolver());
+
+// This will end up calling resolve(context,"&foo") on MyBeanResolver during evaluation
+Object bean = parser.parseExpression("&foo").getValue(context);
+```
+
+### 4.3.13. 三元运算符
+
+您可以使用三元运算符在表达式内部执行 if-then-else条件逻辑。以下列表显示了一个示例：
+
+```java
+String falseString = parser.parseExpression(
+        "false ? 'trueExp' : 'falseExp'").getValue(String.class);
+```
+
+在这种情况下，布尔值false会导致返回字符串值“ falseExp”。一个更现实的例子如下：
+
+```java
+parser.parseExpression("name").setValue(societyContext, "IEEE");
+societyContext.setVariable("queryName", "Nikola Tesla");
+
+expression = "isMember(#queryName)? #queryName + ' is a member of the ' " +
+        "+ Name + ' Society' : #queryName + ' is not a member of the ' + Name + ' Society'";
+
+String queryResultString = parser.parseExpression(expression)
+        .getValue(societyContext, String.class);
+// queryResultString = "Nikola Tesla is a member of the IEEE Society"
+```
+
+有关三元运算符的较短语法，请参见Elvis操作符。
+
+### 4.3.14. Elvis 操作符
+
+Elvis 操作符是三元运算符语法的缩短，在[Groovy](http://www.groovy-lang.org/operators.html#_elvis_operator) 重使用。使用三元运算符语法，您通常必须重复两次变量，如以下示例所示：
+
+```java
+String name = "Elvis Presley";
+String displayName = (name != null ? name : "Unknown");
+```
+
+相反，您可以使用Elvis 操作符（与猫王的发型相似）。以下示例显示了如何使用Elvis 操作符：
+
+```java
+ExpressionParser parser = new SpelExpressionParser();
+
+String name = parser.parseExpression("name?:'Unknown'").getValue(new Inventor(), String.class);
+System.out.println(name);  // 'Unknown'
+```
+
+以下列表显示了一个更复杂的示例：
+
+```java
+ExpressionParser parser = new SpelExpressionParser();
+EvaluationContext context = SimpleEvaluationContext.forReadOnlyDataBinding().build();
+
+Inventor tesla = new Inventor("Nikola Tesla", "Serbian");
+String name = parser.parseExpression("name?:'Elvis Presley'").getValue(context, tesla, String.class);
+System.out.println(name);  // Nikola Tesla
+
+tesla.setName(null);
+name = parser.parseExpression("name?:'Elvis Presley'").getValue(context, tesla, String.class);
+System.out.println(name);  // Elvis Presley
+```
+
+> :information_source:您可以使用Elvis 操作符在表达式中应用默认值。以下示例显示了如何在@Value表达式中使用Elvis 操作符：
+>
+> ```java
+> @Value("#{systemProperties['pop3.port'] ?: 25}")
+> ```
+>
+> 如果定义了系统属性pop3.port，则注入它的值，否则注入25。
+
+### 4.3.15. 安全导航运算符
+
+安全导航运算符用于避免NullPointerException，来自Groovy语言。通常，当您引用一个对象时，您可能需要在访问对象的方法或属性之前验证它不是null。为了避免这种情况，安全导航运算符返回null而不是抛出异常。以下示例显示了如何使用安全导航运算符：
+
+```java
+ExpressionParser parser = new SpelExpressionParser();
+EvaluationContext context = SimpleEvaluationContext.forReadOnlyDataBinding().build();
+
+Inventor tesla = new Inventor("Nikola Tesla", "Serbian");
+tesla.setPlaceOfBirth(new PlaceOfBirth("Smiljan"));
+
+String city = parser.parseExpression("placeOfBirth?.city").getValue(context, tesla, String.class);
+System.out.println(city);  // Smiljan
+
+tesla.setPlaceOfBirth(null);
+city = parser.parseExpression("placeOfBirth?.city").getValue(context, tesla, String.class);
+System.out.println(city);  // null - does not throw NullPointerException!!!
+```
+
+
+
+### 4.3.16. 集合选择
+
+Selection 是一种强大的表达语言功能，可让您通过从源集合条目中选择来将源集合转换为另一个集合。选择使用`.?[selectionExpression]`的语法。它过滤了集合并返回一个包含原始元素子集的新集合。例如，选择使我们可以轻松获取Serbian inventors列表，如以下示例所示：
+
+```java
+List<Inventor> list = (List<Inventor>) parser.parseExpression(
+        "members.?[nationality == 'Serbian']").getValue(societyContext);
+```
+
+在列表和map上都可以选择。对于列表，针对列表每个单独元素应用选择标准。在map上，针对每个entry（Java的Map.Entry对象）应用选择标准。每个entry都有可访问的键和值，可在选择中使用。
+
+以下表达式返回了由原map中值小于27的entry组成的新map：
+
+```java
+Map newMap = parser.parseExpression("map.?[value<27]").getValue();
+```
+
+除了返回所有选定的元素外，您还可以检索第一个或最后一个值。获得与选择相匹配的第一个条目的语法为`.^[selectionExpression]`。获得最后匹配的值的语法为`.$[selectionExpression]`。
+
+### 4.3.17. 集合Projection
+
+Projection使集合可以驱动对子表达的计算，结果是一个新集合。其语法为`.![projectionExpression]`。例如，假设我们有一份inventors 列表，但想要他们出生的城市列表。我们希望计算inventors 列表中每个条目的“placeOfBirth.city”。以下示例使用Projection来做到这一点：
+
+```java
+// returns ['Smiljan', 'Idvor' ]
+List placesOfBirth = (List)parser.parseExpression("members.![placeOfBirth.city]");
+```
+
+您还可以使用map驱动Projection，在这种情况下，对map中的每个entry计算Projection表达式。其结果是一个列表，该列表包括针对每个map entry的Projection表达式的计算结果。
+
+### 4.3.18.  表达式模板
+
+表达式模板允许将字面文本与一个或多个计算块混合。每个计算块都用可以定义的前缀和后缀字符界定。一个常见的选择是将`#{ }`用作定界符，如下示例显示：
+
+```java
+String randomPhrase = parser.parseExpression(
+        "random number is #{T(java.lang.Math).random()}",
+        new TemplateParserContext()).getValue(String.class);
+
+// evaluates to "random number is 0.7038186818312008"
+```
+
+通过拼接字符串和`#{}`内的表达式结果得到最终计算结果。parseExpression()方法的第二个参数类型是ParserContext。ParserContext接口用于影响表达式解析的方式，以支持表达模板功能。TemplateParserContext的定义如下：
+
+```java
+public class TemplateParserContext implements ParserContext {
+
+    public String getExpressionPrefix() {
+        return "#{";
+    }
+
+    public String getExpressionSuffix() {
+        return "}";
+    }
+
+    public boolean isTemplate() {
+        return true;
+    }
+}
+```
+
+## 4.4. 示例中使用的类
+
+本节列出了本章中示例中使用的类。
+
+```java
+package org.spring.samples.spel.inventor;
+
+import java.util.Date;
+import java.util.GregorianCalendar;
+
+public class Inventor {
+
+    private String name;
+    private String nationality;
+    private String[] inventions;
+    private Date birthdate;
+    private PlaceOfBirth placeOfBirth;
+
+    public Inventor(String name, String nationality) {
+        GregorianCalendar c= new GregorianCalendar();
+        this.name = name;
+        this.nationality = nationality;
+        this.birthdate = c.getTime();
+    }
+
+    public Inventor(String name, Date birthdate, String nationality) {
+        this.name = name;
+        this.nationality = nationality;
+        this.birthdate = birthdate;
+    }
+
+    public Inventor() {
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public String getNationality() {
+        return nationality;
+    }
+
+    public void setNationality(String nationality) {
+        this.nationality = nationality;
+    }
+
+    public Date getBirthdate() {
+        return birthdate;
+    }
+
+    public void setBirthdate(Date birthdate) {
+        this.birthdate = birthdate;
+    }
+
+    public PlaceOfBirth getPlaceOfBirth() {
+        return placeOfBirth;
+    }
+
+    public void setPlaceOfBirth(PlaceOfBirth placeOfBirth) {
+        this.placeOfBirth = placeOfBirth;
+    }
+
+    public void setInventions(String[] inventions) {
+        this.inventions = inventions;
+    }
+
+    public String[] getInventions() {
+        return inventions;
+    }
+}
+```
+
+```java
+package org.spring.samples.spel.inventor;
+
+public class PlaceOfBirth {
+
+    private String city;
+    private String country;
+
+    public PlaceOfBirth(String city) {
+        this.city=city;
+    }
+
+    public PlaceOfBirth(String city, String country) {
+        this(city);
+        this.country = country;
+    }
+
+    public String getCity() {
+        return city;
+    }
+
+    public void setCity(String s) {
+        this.city = s;
+    }
+
+    public String getCountry() {
+        return country;
+    }
+
+    public void setCountry(String country) {
+        this.country = country;
+    }
+}
+```
+
+```java
+package org.spring.samples.spel.inventor;
+
+import java.util.*;
+
+public class Society {
+
+    private String name;
+
+    public static String Advisors = "advisors";
+    public static String President = "president";
+
+    private List<Inventor> members = new ArrayList<Inventor>();
+    private Map officers = new HashMap();
+
+    public List getMembers() {
+        return members;
+    }
+
+    public Map getOfficers() {
+        return officers;
+    }
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public boolean isMember(String name) {
+        for (Inventor inventor : members) {
+            if (inventor.getName().equals(name)) {
+                return true;
+            }
+        }
+        return false;
+    }
+}
+```
+
+
+
+# 5. Spring面向切面编程
+
+面向切面的编程（AOP）通过提供另一种思考程序结构的方式来补充面向对象的编程（OOP）。OOP中模块化的关键单位是类，而在AOP中，模块化单位是切面。切面使模块化的关注点（例如事务管理）跨多种类型和对象。（此类关注点通常被称为AOP文献中的“横切”问题。）
+
+Spring的关键组成部分之一是AOP框架。虽然Spring IOC容器不依赖AOP（这意味着您不需要使用AOP），但AOP补充了Spring IOC，以提供功能强大的中间件解决方案。
+
+
+
+> ​								Spring AOP使用AspectJ切点
+>
+> Spring通过使用[schema-based approach](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-schema) 方法或[@AspectJ annotation style](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-ataspectj)来编写自定义切面。这两种方式都提供了完全类型化的通知，并使用了AspectJ 切点语言，同时仍使用Spring AOP进行编织。本章讨论了基于schema和基于@AspectJ的AOP支持。下一章将讨论较底层的AOP支持。
+
+AOP在Spring框架中用于：
+
+- 提供声明性的企业服务。最重要的服务是声明式的事务管理。
+- 让用户实现自定义切面，并使用AOP补充对OOP的使用。
+
+> :information_source:如果您仅对通用声明服务或其他预先包装的声明中间件服务（例如pooling）感兴趣，则无需直接使用Spring AOP，并且可以跳过本章的大部分。
+
+## 5.1. AOP概念
+
+让我们首先定义一些核心的AOP概念和术语。这些术语不是特定于Spring的。不幸的是，AOP术语不是特别直观。但是，如果Spring使用自己的术语，那将更加令人困惑。
+
+- 切面（Aspect）：跨多个类的模块化的关注点。事务管理是企业Java应用程序中关注的横切问题的一个很好的例子。在Spring AOP中，通过使用常规类（基于[schema](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-schema)的方法）或@Aspect注解（ [@AspectJ style](https://docs.spring.io/spring-framework/docs/5.3.2/reference/html/core.html#aop-ataspectj)）注释的常规类实现切面。
+- 连接点（Join point）：执行程序期间的一个点，例如方法或异常处理的执行。在Spring AOP中，连接点始终表示方法执行。
+- 通知（Advice）：在特定的连接点上采取的行动。不同类型的通知包括“around”，“before”和“after”建议。（Advice 类型将在后面讨论。）许多AOP框架，包括Spring，为拦截器建模，并围绕连接点维护一系列拦截器。
+- 切点（Poincut）：与连接点匹配的谓词。Advice 与切点表达式相关联，并在与切点匹配的任何连接点上运行（例如，执行具有特定名称的方法）。与切点表达式相匹配的连接点的概念对于AOP至关重要，Spring默认情况下使用了AspectJ 切点表达式语言。
+- 引进（Introduction）：代表一种类型声明其他方法或字段。Spring AOP使您可以将新的接口（以及相应的实现）引入任何advised的对象。例如，您可以使用introduction使bean实现IsModified接口，以简化缓存。（introduction 在AspectJ 社区中被称为inter-type声明。）
+- 目标对象（Target objec）：一个或多个切面通知的对象。也称为“被通知的对象”。由于Spring AOP由运行时代理实现，因此该对象始终是代理对象。
+- AOP代理（AOP proxy）：AOP框架创建的对象，以实现切面约定（通知方法执行等）。在Spring框架中，AOP代理是JDK动态代理或CGLIB代理。
+- 织入（Weaving）：将切面与其他应用程序类型或对象链接起来，以创建通知的对象。这可以在编译时（例如使用AspectJ编译器），加载时或运行时完成。像其他纯Java AOP框架一样，Spring AOP在运行时进行织入。
+
+Spring AOP包括以下类型的通知：
+
+- Before advice: 在连接点之前运行的通知，但没有能力防止执行流程延伸到连接点（除非引发异常）。
+- After returning advice: 在连接点正常完成后要运行的通知（例如，如果方法返回而不抛出异常）。
+- After throwing advice: 如果方法通过抛出异常来退出时运行的通知。
+- After (finally) advice:不管连接点退出的手段（正常或异常返回），都必须运行的通知。
+- Around advice: 围绕切入点（例如方法调用）的通知。这是最强大的通知。环绕通知可以在方法调用之前和之后执行自定义行为。它还负责选择是通过返回自己的返回值或抛出异常来继续执行到切点还是缩短被通知的方法执行。
+
+环绕通知是最普遍的通知。Spring AOP，像AspectJ一样，提供各种通知了类型，我们建议您使用可以实现所需行为的最小强度的通知类型。例如，如果您只需要使用方法的返回值更新缓存，那么您最好实现after returning advice而不是around advice，尽管around advice可以完成同一件事。使用最特定的通知类型提供了更简单的编程模型，发生错误的几率小。例如，您无需调用用于环绕通知的JoinPoint上的proceed()方法，因此，您不可能调用失败。
+
+所有通知参数都是静态键入的，因此您可以使用适当类型的通知参数（例如，从方法执行中的返回值的类型）而不是对象数组。
+
+与切点相匹配的连接点的概念是AOP的关键，它将其与仅提供拦截的旧技术区分开。切点使通知能够独立于面向对象的层次结构。例如，您可以应用环绕通知，将声明式事务管理提供给跨多个对象的一组方法（例如服务层中的所有业务操作）。
+
+## 5.2. Spring AOP功能和目标
+
+
 
 
 
